@@ -18,4 +18,5 @@
 	<add key="accountName" value="'Joe'" />
 	<add key="datasourcePostgreSQL" value="localhost"/>
 	<add key="directory" value="Maps" />
+	<add key="useStatementNamespaces" value="false" />
 </settings>
