@@ -2,13 +2,13 @@
 <sqlMapConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:noNamespaceSchemaLocation="SqlMapConfig.xsd">
 	
+	<properties resource="../../Database.config"/>
+		
 	<settings>
 		<setting useStatementNamespaces="false"/>
 		<setting cacheModelsEnabled="true"/>
 	</settings>
 	
-	<properties resource="../../Database.config"/>
-		
 	<!-- ==== OleDb configuration =========	-->
 	<database>
 		<provider name="OleDb1.1"/>
