@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sqlMapConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:noNamespaceSchemaLocation="SqlMapConfig.xsd">
+
+	<properties resource="../../database.config"/>
+	
 	<settings>
 		<setting useStatementNamespaces="false"/>
 		<setting cacheModelsEnabled="true"/>
 		<setting validateSqlMap="false"/>
 	</settings>
 	
-	<properties resource="../../database.config"/>
-
 	<!-- ==== Odbc configuration =========	-->
 	<database>	
 		<provider name="Odbc1.1"/>
