@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sqlMapConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:noNamespaceSchemaLocation="SqlMapConfig.xsd">
+
+	<properties resource="../../database.config"/>
 	
 	<settings>
 		<setting useStatementNamespaces="false"/>
 		<setting cacheModelsEnabled="true"/>
 		<setting validateSqlMap="false"/>
-	</settings>
-	
-	<properties resource="../../database.config"/>
+	</settings>	
 		
 	<!-- Optional if resource -->
 	<providers embedded="bin.Debug.providers.config, IBatisNet.DataMapper.Test"/>
