@@ -2,15 +2,15 @@
 <sqlMapConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
      xsi:noNamespaceSchemaLocation="SqlMapConfig.xsd">
      
-	<settings>
-		<setting useStatementNamespaces="false"/>
-		<setting cacheModelsEnabled="true"/>
-		<setting validateSqlMap="false"/>
-	</settings>
-
 	<!-- Rem : If used via a DataAccess context, properties tag will be ignored -->
 	<properties resource="../../database.config"/>
 	<!-- <properties embedded="database.config, IBatisNet.Test"/> -->
+	
+	<settings>
+		<setting useStatementNamespaces="${useStatementNamespaces}"/>
+		<setting cacheModelsEnabled="true"/>
+		<setting validateSqlMap="false"/>
+	</settings>
 	
 	<!-- Optional if resource -->
 	<providers resource="providers.config"/>
