@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sqlMapConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="SqlMapConfig.xsd">
-	<settings>
-		<setting useStatementNamespaces="false"/>
-		<setting cacheModelsEnabled="true"/>
-	</settings>
 
 	<!-- Rem : If used via a DataAccess context, properties tag will be ignored -->
 	<properties resource="../../Database.config"/>
 	<!-- <properties embedded="database.config, IBatisNet.Test"/> -->
 
+	<settings>
+		<setting useStatementNamespaces="false"/>
+		<setting cacheModelsEnabled="true"/>
+	</settings>	
+	
 	<!-- ==== PostgreSQL configuration =========	-->
 	<!-- Rem : If used via a DataAccess context, database tag will be ignored -->
 	<database>
